# zero2prod

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: rust.yml
configuration/: base.yaml  production.yaml
migrations/: 20250831183256_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configurations.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health.rs
