[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.8.4"
assertables= "9.8.2"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = {version = "0.6", features= ["trace"]}
tracing = {version ="0.1", features =["log"]}
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
secrecy = {version = "0.10.3", features=["serde"]}
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
validator = "0.20.0"
uuid = { version = "1", features = ["v4"] }
unicode-segmentation = "1.12.0"
config = "0.15.15"

[dev-dependencies]
reqwest = "0.12.23"
